--- a/html_css/作业/注册页面/style.css
+++ b/html_css/作业/注册页面/style.css
@@ -1,39 +1,25 @@
-header,section,article,aside,footer,main{
-    display: block;
-}
-header{
-    width: 100%;
-    height: 200px;
-    background: red;
-}
-main{
-    height: 450px;
-}
-section{
-    width: 60%;
-    height: 450px;
-    background: rgb(96, 168, 138);
-}
-article{
-    width: 97%;
-    height: 100px;
-    margin: 10px;
-    background: seashell
-}
-aside{
-    width: 40%;
-    height: 450px;
-    background: rgb(89, 50, 230);
+.background {
+    background: url(./images/background.png) ;
+    background-size: cover
 }
 
-footer{
-    width: 100%;
-    height: 200px;
-    background: black;
-}
-.left{
+.left {
     float: left;
 }
-.right{
-    float:right;
+
+.right {
+    float: right;
+}
+
+.title {
+    font-size: 60px;
+    color: white;
+    position: relative;
+    left: 50px;
+    top: 4em
+}
+
+.left-main {
+    width: 50%;
+    height: 800px;
 }
